src/usdb_syncer/gui/resources/styles/diff.css
.diff-table {{
  border-collapse: collapse;
  width: 100%;
  font-family: "JetBrains Mono", "Menlo", "Consolas", monospace;
  font-size: 13px;
  line-height: 1.4;
}}

.lineno {{
  color: {lineno_text};
  text-align: right;
  padding: 0 8px;
  width: 3em;
  border-right: 1px solid {lineno_border};
  user-select: none;
}}

.line {{
  white-space: pre-wrap;
  padding-left: 4px;
}}

.equal {{
  background-color: {equal_bg};
  color: {equal_text};
}}

.add {{
  background-color: {add_bg};
  color: {add_text};
}}

.del {{
  background-color: {del_bg};
  color: {del_text};
}}

.add-inline {{
  background-color: {add_inline_bg};
  color: {add_inline_text};
}}

.del-inline {{
  background-color: {del_inline_bg};
  color: {del_inline_text};
}}

.empty {{
  background-color: {empty_bg};
}}

